--- a/ThinkWhat/Info.plist
+++ b/ThinkWhat/Info.plist
@@ -41,6 +41,8 @@
 	<key>LSApplicationQueriesSchemes</key>
 	<array>
 		<string>fbapi</string>
+		<string>tiktok</string>
+		<string>youtube</string>
 		<string>fb-messenger-share-api</string>
 		<string>fbauth2</string>
 		<string>fbshareextension</string>
