mail login vc almost done

--- a/ThinkWhat/Info.plist
+++ b/ThinkWhat/Info.plist
@@ -129,5 +129,7 @@
 	</array>
     <key>FacebookAutoLogAppEventsEnabled</key>
     <false/>
+    <key>FacebookAdvertiserIDCollectionEnabled</key>
+    <false/>
 </dict>
 </plist>
