--- a/ThinkWhat/Info.plist
+++ b/ThinkWhat/Info.plist
@@ -117,6 +117,18 @@
 	<string>6LcFd0UeAAAAADYslKFQeYeAL8_aLmSRGP80qAP5</string>
 	<key>UIAppFonts</key>
 	<array>
+		<string>Rubik-SemiBoldItalic.ttf</string>
+		<string>Rubik-MediumItalic.ttf</string>
+		<string>Rubik-Medium.ttf</string>
+		<string>Rubik-LightItalic.ttf</string>
+		<string>Rubik-Light.ttf</string>
+		<string>Rubik-ExtraBoldItalic.ttf</string>
+		<string>Rubik-ExtraBold.ttf</string>
+		<string>Rubik-Italic.ttf</string>
+		<string>Rubik-Bold.ttf</string>
+		<string>Rubik-BoldItalic.ttf</string>
+		<string>Rubik-BlackItalic.ttf</string>
+		<string>Rubik-Black.ttf</string>
 		<string>Rubik-Regular.ttf</string>
 		<string>Rubik-SemiBold.ttf</string>
 		<string>OpenSans-Semibold.ttf</string>
