--- a/ThinkWhat.xcodeproj/xcshareddata/xcschemes/ThinkWhat.xcscheme
+++ b/ThinkWhat.xcodeproj/xcshareddata/xcschemes/ThinkWhat.xcscheme
@@ -59,6 +59,13 @@
             ReferencedContainer = "container:ThinkWhat.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <EnvironmentVariables>
+         <EnvironmentVariable
+            key = "CG_CONTEXT_SHOW_BACKTRACE"
+            value = "YES"
+            isEnabled = "NO">
+         </EnvironmentVariable>
+      </EnvironmentVariables>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
