--- a/ThinkWhat/ThinkWhatDebug.entitlements
+++ b/ThinkWhat/ThinkWhatDebug.entitlements
@@ -8,6 +8,11 @@
 	<array>
 		<string>Default</string>
 	</array>
+	<key>com.apple.developer.associated-domains</key>
+	<array>
+		<string>applinks:www.thinkwhat.app</string>
+		<string>applinks:thinkwhat.app</string>
+	</array>
 	<key>com.apple.security.application-groups</key>
 	<array>
 		<string>group.bukharovpavel.thinkwhat</string>
